<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>jp.jyn</groupId>
    <artifactId>Zabbigot</artifactId>
    <version>2.0.0</version>
    <url>https://github.com/HimaJyun/Zabbigot</url>
    <description>Spigot plugin for Zabbix monitoring.</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <spigot.version>1.13.2-R0.1-SNAPSHOT</spigot.version>
    </properties>

    <developers>
        <developer>
            <id>HimaJyun</id>
            <url>https://jyn.jp/</url>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <scm>
        <url>http://github.com/HimaJyun/Zabbigot</url>
        <connection>scm:git:https://github.com/HimaJyun/Zabbigot.git</connection>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/HimaJyun/Zabbigot/issues</url>
    </issueManagement>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}</version>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources/</directory>
            </resource>
        </resources>
    </build>
</project>
